[package]
name = "newt"
version = "0.0.1"
authors = ["Bradley Claus bradley.claus@chtm.me"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
# keep for mem* functions
rlibc = "1.0.0"

raw-cpuid = "10.2.0"
volatile = "0.4.4"
spin = "0.9.2"
bit_field = "0.10.1"
bitflags = "1.2.1"
x86_64 = "0.14.4"

uefi = { version = "0.12.0", features = ['logger', 'alloc', ] }
uefi-services = "0.9.0"
uefi-macros = "0.4.0"
log = { version = "0.4.0", default-features = false }
goblin = { version = "0.4.3", default-features = false, features = ['elf32', 'elf64'] }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[term]
verbose = true
